--- a/res/layout/badge.xml
+++ b/res/layout/badge.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="48dp"
-    android:layout_height="fill_parent"
+    android:layout_height="match_parent"
     android:layout_gravity="right"
     
      >
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:padding="@dimen/padding_small"
-        android:text="99"
-        android:textColor="@android:color/black" />
+        android:text="-1"
+        android:textColor="#00FF00" />
 
 </RelativeLayout>
