--- a/res/layout/reward_item.xml
+++ b/res/layout/reward_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <RelativeLayout
+     <RelativeLayout
         android:id="@+id/container"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -13,11 +13,33 @@
         android:layout_marginLeft="@dimen/padding_normall"
         android:layout_marginRight="@dimen/padding_normall"
         android:layout_marginTop="@dimen/padding_normall"
-        android:background="@drawable/background_white_shadow_strech"
+        android:background="@drawable/selector_background_white_shadow"
         android:padding="@dimen/padding_normall" >
+        <ImageView 
+    	    android:id="@+id/image"
+    	    android:layout_width="fill_parent"
+    	    android:layout_height="240dp"
+    	    android:layout_margin="@dimen/padding_large"
+    	    android:background="@color/gray"
+    	    />
+        <TextView 
+        	    android:id="@+id/description"
+        	    android:layout_width="fill_parent"
+        	    android:layout_height="wrap_content"
+        	    android:textSize="24sp"
+        	    android:text="default"
+        	  	android:layout_below="@+id/image"
+        	    />
+        <Button android:id="@+id/button_approve"
+            	android:layout_width="wrap_content"
+            	android:layout_height="wrap_content"
+            	android:text="Approve"
+            	android:layout_below="@+id/description"
+            	android:layout_centerHorizontal="true"
+            />
+        
         </RelativeLayout>
         
-    
-    
-    
+    	
+		
     </RelativeLayout>
